# ThinkyLM

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: tests.yml
api/: __init__.py  dependencies.py  main.py  schemas.py
configs/: debug_1m.yaml  portfolio_25m.yaml  tiny_10m.yaml
data/instructions/: thinky_instructions.jsonl
data/sample/: epistemology.txt  ethics.txt  logic_fallacies.txt  philosophy_intro.txt  philosophy_of_mind.txt
data_pipeline/: __init__.py  clean.py  dataset.py  deduplicate.py  manifest_example.csv  prepare_sample_data.py  split.py  tokenize.py
demo/: gradio_app.py
evaluation/: __init__.py  benchmark.py  evaluate_checkpoint.py  generation_metrics.py  perplexity.py  thinky_bench.json
inference/: __init__.py  cli.py  service.py
reports/: architecture.md  cloud_training_guide.md  evaluation_report_template.md  roadmap.md  training_report_template.md
scripts/: __init__.py  check_hardware.py  run_api.ps1  run_debug_training.ps1  run_tests.ps1  setup_linux.sh  setup_windows.ps1
tests/: test_api.py  test_attention.py  test_checkpoint.py  test_config.py  test_dataset.py  test_generation.py  test_hardware_safety.py  test_model.py  test_model_ci.py  test_tokenizer.py
thinkylm/: __init__.py  attention.py  block.py  checkpoint.py  config.py  embeddings.py  feedforward.py  generation.py  model.py  utils.py
tokenizer/: evaluate_tokenizer.py  sample_text.txt  train_tokenizer.py
training/: __init__.py  instruct_train.py  monitor.py  optimizer.py  pretrain.py  scheduler.py
