[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkylm"
version = "0.1.0"
description = "ThinkyLM: A decoder-only Transformer for critical and philosophical argumentation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Haziq Imran" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "tokenizers>=0.20.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "gradio>=4.0.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "tensorboard>=2.16.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
thinkylm-train = "training.pretrain:main"
thinkylm-api = "api.main:main"
thinkylm-cli = "inference.cli:main"
thinkylm-check = "scripts.check_hardware:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["thinkylm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 120

[tool.setuptools.packages.find]
include = ["thinkylm*", "tokenizer*", "data_pipeline*", "training*", "evaluation*", "inference*", "api*", "demo*"]
